base/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-canary
  labels:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/version: v1.0.0
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    app.kubernetes.io/name: myapp
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  type: ClusterIP
